<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".EnActMain" >

     <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:background="#CFFAD5">
    
         <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose_benchmark" />
         
        <RadioGroup 
            android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">            
            
	        <RadioButton android:id="@+id/radio_matrix"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/bench_matrices"
	        android:onClick="onRadioButtonClicked"/>
	        
	    	<RadioButton android:id="@+id/radio_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/bench_image"
	        android:onClick="onRadioButtonClicked"/>
	    	
	    </RadioGroup>
        
	 </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:background="#E2E1FC">
   
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose_load" />
        <RadioGroup 
            android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">            
            
	        <RadioButton android:id="@+id/radio_level1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/level1"
	        android:onClick="onRadioClicked"/>
	        
	    	<RadioButton android:id="@+id/radio_level2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/level2"
	        android:onClick="onRadioClicked"/>
	    	
	    	<RadioButton android:id="@+id/radio_level3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/level3"
	        android:onClick="onRadioClicked"/>
	    	
	    	<RadioButton android:id="@+id/radio_level4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/level4"
	        android:onClick="onRadioClicked"/>
	    	
	    	<RadioButton android:id="@+id/radio_level5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/level5"
	        android:onClick="onRadioClicked"/>
	    	
	    </RadioGroup>
        
	</LinearLayout>
	
	<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_benchmark" 
        android:onClick="runBenchmark"/>

    
    
    
</LinearLayout>
